[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/ArrowTemp.png" type="Texture" id=1]
[ext_resource path="res://Player/Arrow.gd" type="Script" id=2]
[ext_resource path="res://CheckBoxes/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://CheckBoxes/HurtBox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 1 )

[node name="Arrow" type="RigidBody2D"]
collision_layer = 64
collision_mask = 2
continuous_cd = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -0.5 )
collision_layer = 12

[node name="Collider" parent="HitBox" index="0"]
position = Vector2( 6, 0 )
shape = SubResource( 2 )

[node name="Deleted" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deleted"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="LiverTime" type="Timer" parent="."]
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_mask = 40

[node name="Collider" parent="HurtBox" index="0"]
position = Vector2( -2, -0.5 )
shape = SubResource( 4 )

[node name="JustSpawn" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="NarrowCheckBottom" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NarrowCheckBottom"]
position = Vector2( 0, -3 )
shape = SubResource( 5 )

[node name="NarrowCheckTop" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NarrowCheckTop"]
position = Vector2( 0, 2 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Deleted" to="." method="_on_Deleted_body_entered"]
[connection signal="timeout" from="LiverTime" to="." method="_on_LiverTime_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="timeout" from="JustSpawn" to="." method="_on_JustSpawn_timeout"]
[connection signal="body_entered" from="NarrowCheckBottom" to="." method="_on_NarrowCheckBottom_body_entered"]
[connection signal="body_entered" from="NarrowCheckTop" to="." method="_on_NarrowCheckTop_body_entered"]

[editable path="HitBox"]
[editable path="HurtBox"]
